[package]
name = "zero2prod"
version = "0.1.0"
authors = ["swanandx"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = "0.11"

[dependencies]
config = "0.12"
actix-web = "4"
tokio = { version = "1", features =  ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"

[dependencies.sqlx]
version = "0.5.11"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]